--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "bootstrap": "^3.4.0",
+    "bootstrap": "^3.4.1",
     "core-js": "^2.5.4",
     "ng2-animate-on-scroll": "^1.0.11",
     "ngx-bootstrap": "^3.0.1",
     "ngx-parallax": "^4.0.0",
+    "node-sass": "^7.0.1",
     "parallax-js": "^3.1.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.4.0",
@@ -32,7 +33,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
-    "@angular/cli": "~6.1.5",
+    "@angular/cli": "^7.3.10",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
     "@types/jasmine": "~2.8.6",
